[utils] remove ListUtils.listOf, useless in java 17